--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-dev/WebDevGeoBundle",
+    "name": "web-dev/web-dev-geo-bundle",
     "type": "library",
     "description": "Brings tones of Geographical functionality to your SF2 application",
     "keywords": ["geo"],
