--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-dev/web-dev-geo-bundle",
+    "name": "web-dev/geo-bundle",
     "type": "library",
     "description": "Brings tones of Geographical functionality to your SF2 application",
     "keywords": ["geo"],
@@ -13,8 +13,8 @@
         "symfony/framework-bundle": ">=2.0,<2.3-dev"
     },
     "autoload":     {
-        "psr-0": { "WebDev\\Bundle\\WebDevGeoBundle": "" }
+        "psr-0": { "WebDev\\Bundle\\GeoBundle": "" }
     },
-    "target-dir": "WebDev/Bundle/WebDevGeoBundle"
+    "target-dir": "WebDev/Bundle/GeoBundle"
     
 }
